cmake_minimum_required(VERSION 3.5)

project(MyProject)

# Add subdirectories
add_subdirectory(ChCore)
add_subdirectory(ChObject)
add_subdirectory(ChJson)
add_subdirectory(ChXml)
add_subdirectory(ChElapsedTimer)
add_subdirectory(ChTimer)
add_subdirectory(ChSemaphore)
add_subdirectory(ChThread)
add_subdirectory(ChMutex)