cmake_minimum_required(VERSION 3.5)

project(MyProject)

# Add subdirectories
add_subdirectory(ChArray)
add_subdirectory(ChByteArray)
add_subdirectory(ChCoordinate)
add_subdirectory(ChCore)
add_subdirectory(ChCriticalSection)
add_subdirectory(ChDeque)
add_subdirectory(ChElapsedTimer)
add_subdirectory(ChHashMap)
add_subdirectory(ChJson)
add_subdirectory(ChList)
add_subdirectory(ChLogger)
add_subdirectory(ChMap)
add_subdirectory(ChMath)
add_subdirectory(ChMutex)
add_subdirectory(ChObject)
add_subdirectory(ChPoint)
add_subdirectory(ChPriorityQueue)
add_subdirectory(ChQueue)
add_subdirectory(ChSemaphore)
add_subdirectory(ChSet)
add_subdirectory(ChSharedMemory)
add_subdirectory(ChStack)
add_subdirectory(ChString)
add_subdirectory(ChThread)
add_subdirectory(ChTimer)
add_subdirectory(ChTuple)
add_subdirectory(ChUnorderedSet)
add_subdirectory(ChVector)
add_subdirectory(ChXml)